--- a/GardenPlanner/GardenPlanner.csproj
+++ b/GardenPlanner/GardenPlanner.csproj
@@ -56,6 +56,12 @@
     <Compile Include="AddPlant.Designer.cs">
       <DependentUpon>AddPlant.cs</DependentUpon>
     </Compile>
+    <Compile Include="DisplayJournal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DisplayJournal.Designer.cs">
+      <DependentUpon>DisplayJournal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +72,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AddPlant.resx">
       <DependentUpon>AddPlant.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DisplayJournal.resx">
+      <DependentUpon>DisplayJournal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
