--- a/GardenPlanner/GardenPlanner.csproj
+++ b/GardenPlanner/GardenPlanner.csproj
@@ -50,6 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="New Entirys\NewSelectedVeg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="New Entirys\NewSelectedVeg.Designer.cs">
+      <DependentUpon>NewSelectedVeg.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tools\AddPlant.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +100,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="New Entirys\NewSelectedVeg.resx">
+      <DependentUpon>NewSelectedVeg.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Tools\AddPlant.resx">
       <DependentUpon>AddPlant.cs</DependentUpon>
     </EmbeddedResource>
