--- a/GardenPlanner/GardenPlanner.csproj
+++ b/GardenPlanner/GardenPlanner.csproj
@@ -119,6 +119,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\Help.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tools\Help.Designer.cs">
+      <DependentUpon>Help.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Edit\EditJob.resx">
       <DependentUpon>EditJob.cs</DependentUpon>
     </EmbeddedResource>
@@ -161,6 +167,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Tools\Help.resx">
+      <DependentUpon>Help.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
