--- a/GardenPlanner/GardenPlanner.csproj
+++ b/GardenPlanner/GardenPlanner.csproj
@@ -74,30 +74,6 @@
     <Compile Include="Details\Veg.Designer.cs">
       <DependentUpon>Veg.cs</DependentUpon>
     </Compile>
-    <Compile Include="Details\VegSelected.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Details\VegSelected.Designer.cs">
-      <DependentUpon>VegSelected.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Edit\EditNote.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Edit\EditNote.Designer.cs">
-      <DependentUpon>EditNote.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Edit\EditVeg.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Edit\EditVeg.Designer.cs">
-      <DependentUpon>EditVeg.cs</DependentUpon>
-    </Compile>
-    <Compile Include="New Entirys\NewSelectedVeg.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="New Entirys\NewSelectedVeg.Designer.cs">
-      <DependentUpon>NewSelectedVeg.cs</DependentUpon>
-    </Compile>
     <Compile Include="SqL.cs" />
     <Compile Include="Tools\AddPlant.cs">
       <SubType>Form</SubType>
@@ -117,12 +93,6 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="New Entirys\NewNote.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="New Entirys\NewNote.Designer.cs">
-      <DependentUpon>NewNote.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\Help.cs">
@@ -137,17 +107,11 @@
     <EmbeddedResource Include="Details\Journal.resx">
       <DependentUpon>Journal.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Details\Note.resx">
+      <DependentUpon>Note.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Details\Veg.resx">
       <DependentUpon>Veg.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Edit\EditNote.resx">
-      <DependentUpon>EditNote.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Edit\EditVeg.resx">
-      <DependentUpon>EditVeg.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="New Entirys\NewSelectedVeg.resx">
-      <DependentUpon>NewSelectedVeg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Tools\AddPlant.resx">
       <DependentUpon>AddPlant.cs</DependentUpon>
@@ -157,9 +121,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="New Entirys\NewNote.resx">
-      <DependentUpon>NewNote.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
